--- a/src/App.css
+++ b/src/App.css
@@ -22,11 +22,44 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#train {
+  margin-top: 10px;
+}
+
+label {
+  display: inline-block;
+  width: 250px;
+  padding: 6px 0 6px 0;
+}
+
+.canvases {
+  display: inline-block;
+}
+
+.prediction-canvas {
+  width: 100px;
+}
+
+.pred {
+  font-size: 20px;
+  line-height: 25px;
+  width: 100px;
+}
+
+.pred-correct {
+  background-color: #00cf00;
+}
+
+.pred-incorrect {
+  background-color: red;
+}
+
+.pred-container {
+  display: inline-block;
+  width: 100px;
+  margin: 10px;
+}
+
+.tfjs-example-container {
+  padding: 42px;
 }
